Modif README, création (BASIQUE)  des route, des page HTML et des controller .go qui redirige vers ces pages

--- a/temps/collection.html
+++ b/temps/collection.html
@@ -1,15 +1,18 @@
-{{define "index"}}
+{{define "collection"}}
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/global.css">
-    <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" href="../static/css/collection.css">
     <title>Document</title>
 </head>
+
 <body>
-Page d'accueil
+    Affichage de toutes les spécialisations avec possibilité de les filtrer par classe, race et stat principale
 </body>
+
 </html>
 {{end}}
