--- a/temps/doc.html
+++ b/temps/doc.html
@@ -1,15 +1,15 @@
-{{define "index"}}
+{{define "doc"}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/global.css">
-    <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" href="../static/css/doc.css">
     <title>Document</title>
 </head>
 <body>
-Page d'accueil
+Ici la page doc avec la liste des différente route, où elles mènes et si possible, les lien associé (voir plus ? )
 </body>
 </html>
 {{end}}
