--- a/temps/fav.html
+++ b/temps/fav.html
@@ -1,15 +1,15 @@
-{{define "index"}}
+{{define "fav"}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/global.css">
-    <link rel="stylesheet" href="../static/css/index.css">
+    <link rel="stylesheet" href="../static/css/doc.css">
     <title>Document</title>
 </head>
 <body>
-Page d'accueil
+Ici page des favoris, penser à gerer le if nil 
 </body>
 </html>
 {{end}}
