--- a/temps/categorie.html
+++ b/temps/categorie.html
@@ -17,15 +17,55 @@
     Par exemple, vous pouvez trier une collection de musiques en fonction de son genre, pour collection
     de plantes en fonction de son type…
     
-    <div class="classe">
 
-    </div>
-    <div class="race">
 
+    <a href="/collection?type=allclass">
+        <div>
+            Les différente classes du jeu
+        </div>
+    </a>
+    <a href="/collection?type=allrace">
+        <div>
+            Les différente races du jeu
+        </div>
+    </a>
+    <div>
+        Les différent rôle
+            <a href="/collection?type=tank">
+                <div>
+                    Les Tank
+                </div>
+            </a>
+            <a href="/collection?type=heal">
+                <div>
+                    Les Healer
+                </div>
+            </a>
+            <a href="/collection?type=dps">
+                <div>
+                    Les Dps
+                </div>
+            </a>
     </div>
-    <div class="specialisation">
+        <div>
+            Stat principale
+            <a href="/collection?type=force">
+                <div>
+                    Force
+                </div>
+            </a>
+            <a href="/collection?type=agilite">
+                <div>
+                    Agilité
+                </div>
+            </a>
+            <a href="/collection?type=intelligence">
+                <div>
+                    Intelligence
+                </div>
+            </a>
+        </div>
 
-    </div>
 
 </body>
 
