--- a/temps/about.html
+++ b/temps/about.html
@@ -9,7 +9,32 @@
     <link rel="stylesheet" href="../static/css/collection.css">
     <title>Document</title>
 </head>
+<header>
+    <nav class="navbar">
+        <a href="/" class="logo"><img src="../static/img/logo_WOW.png" alt="Logo de World of Warcraft"></a>
+        <div class="nav-links">
+            <a href="/categorie" class="cat-name">
+                <div class="cat-btn">Catégories</div>
+            </a>
+            <a href="/favoris" class="cat-name">
+                <div class="cat-btn">Favoris</div>
+            </a>
+            <a href="/about" class="cat-name">
+                <div class="cat-btn">About</div>
+            </a>
+            <a href="/doc" class="cat-name">
+                <div class="cat-btn">Doc</div>
+            </a>
 
+        </div>
+        <div class="searchBox">
+            <form action="/rechercher" method="POST">
+                <input class="searchInput" type="text" name="query" placeholder="Rechercher">
+                <button class="searchButton" type="submit">Go</button>
+            </form>
+        </div>
+    </nav>
+</header>
 <body>
     Sur cette page vous allez indiquer le lien vers les maquettes et la liste des taches dans l’ordre que
 vous les avez exécutées, de plus vous aller indiquer les difficultés auquel vous avez fait face ! N’hésitez
