--- a/temps/collection.html
+++ b/temps/collection.html
@@ -9,13 +9,37 @@
     <link rel="stylesheet" href="../static/css/collection.css">
     <title>Document</title>
 </head>
+<header>
+    <nav class="navbar">
+        <a href="/" class="logo"><img src="../static/img/logo_WOW.png" alt="Logo de World of Warcraft"></a>
+        <div class="nav-links">
+            <a href="/categorie" class="cat-name">
+                <div class="cat-btn">Catégories</div>
+            </a>
+            <a href="/favoris" class="cat-name">
+                <div class="cat-btn">Favoris</div>
+            </a>
+            <a href="/about" class="cat-name">
+                <div class="cat-btn">About</div>
+            </a>
+            <a href="/doc" class="cat-name">
+                <div class="cat-btn">Doc</div>
+            </a>
 
+        </div>
+        <div class="searchBox">
+            <form action="/rechercher" method="POST">
+                <input class="searchInput" type="text" name="query" placeholder="Rechercher">
+                <button class="searchButton" type="submit">Go</button>
+            </form>
+        </div>
+    </nav>
+</header>
 <body>
     <p>Col</p>
-    <p>{{.Route}}</p>
     {{if eq .Route "allclass"}}
         {{range .TabClass}}
-            <a href="/ressource?route=allclass&type={{.Id}}">
+            <a href="/ressource?route=class&type={{.Id}}">
             <div>
                 {{.Name}}
             </div>
@@ -23,15 +47,17 @@
         {{end}}
     {{else if eq .Route "allrace"}}
         {{range .TabRace}}
-            <a href="/ressource?route=allrace&type={{.Id}}">
+            <a href="/ressource?route=race&type={{.Id}}">
             <div>
                 {{.Name}}
             </div>
             </a>
         {{end}}
-    {{else if eq .Route "tank"}}
-        {{range .Spec}}
-            <p> {{.Name}} </p>
+    {{else}}
+        {{range .TabSpec}}
+            <a href="/ressource?route=spec&type={{.Id}}">
+                <p> {{.Name}} </p>
+            </a>
            {{end}}
     {{end}}
     <p>Affichage de toutes les spécialisations avec possibilité de les filtrer par classe, race et stat principale</p>
