--- a/temps/recherche.html
+++ b/temps/recherche.html
@@ -1,11 +1,11 @@
-{{define "doc"}}
+{{define "recherche"}}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../static/css/global.css">
-    <link rel="stylesheet" href="../static/css/doc.css">
+    <link rel="stylesheet" href="../static/css/recherche.css">
     <title>Document</title>
 </head>
 <header>
@@ -35,7 +35,12 @@
     </nav>
 </header>
 <body>
-Ici la page doc avec la liste des différente route, où elles mènes et si possible, les lien associé (voir plus ? )
-</body>
+    
+    {{range .TabSpec}}
+    <a href="/ressource?route=spec&type={{.Id}}">
+{{.Name}}
+    </a>
+{{end}}
+Ici la page de recherche
 </html>
 {{end}}
